--- a/templates/blog/frontpage.html
+++ b/templates/blog/frontpage.html
@@ -57,7 +57,9 @@
 
 <div class="post block">
     <!-- 投稿者名 -->
-    <p><strong>投稿者: </strong>{{ post.name }}</p>
+    <p class="post-author">
+    投稿者：{{ post.name }}
+    </p>
 
     <h2 class="subtitle">{{ post.title }}</h2>
     <small>Posted at {{ post.posted_date }}</small>
