--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -35,7 +35,7 @@
     <div class="comment-form-card">
         <h2 class="section-title">💬 コメントを書く</h2>
 
-        <form method="post" enctype="multipart/form-data" class="comment-form">
+        <form method="post" action="{% url 'blog:post_detail' slug=post.slug %}">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="submit-btn">
