--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="media-wrapper">
-            {% if post.image and post.image.name %}
+            {% if post.image %}
             <img src="{{ post.image.url }}" class="comment-media-thumb">
             {% endif %}
 
